# BigEye

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.ui
include/: excepts.hpp  runtime.hpp
include/db/: db.hpp
include/db/backend/: postgres.hpp  sqlite.hpp
include/engine/: engine.hpp
include/input/: camera.hpp  stream.hpp
include/ui/: feedback.hpp  itemwindow.h  journalitem.h  mainwindow.h  mainwindow.ui  sqlwindow.h  window.hpp
include/utils/: args.hpp  host.hpp  hostname.hpp
src/: BigEye.cpp  excepts.cpp
src/db/: db.cpp
src/db/backend/: postgres.cpp  sqlite.cpp
src/engine/: engine.cpp
src/input/: camera.cpp  stream.cpp
src/ui/: feedback.cpp  itemwindow.cpp  itemwindow.ui  journalitem.cpp  journalitem.ui  mainwindow.cpp  mainwindow.ui  serviceitem.ui  sqlwindow.cpp  sqlwindow.h  sqlwindow.ui  window.cpp
src/utils/: args.cpp  args_parser.cpp  host.cpp  hostname.cpp
